# docs2chat

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
src/docs2chat/: __init__.py  pipeline.py
src/docs2chat/apps/: __init__.py  cli.py  main.py  utils.py  web.py
src/docs2chat/chat/: __init__.py  chat.py
src/docs2chat/config/: __init__.py  config.py  config.yaml
src/docs2chat/extract/: __init__.py  extract.py  utils.py
src/docs2chat/pipeline/: __init__.py  pipeline.py  utils.py
src/docs2chat/preprocessing/: __init__.py  preprocessing.py  utils.py
