[metadata]
name = docs2chat
version = 0.1
description = A package to enable functioning of docs2chat app.
long-description = file: README.md
long_description_content_type: text/markdown
url = https://github.com/BobbyLumpkin/twitter-sentiment-analysis.git
keywords = llm,nlp,chatbot
platforms = unix, linux, win32
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages =
    docs2chat
    docs2chat.config
    docs2chat.apps
python_requires = >=3.9
install_requires =
    faiss-gpu >= 1.7.1
    farm-haystack >= 1.19.0
    InstructorEmbedding >= 1.0.1
    langchain >= 0.0.247
    llama-cpp-python >= 0.1.77
    sentence_transformers >= 2.2.0
    sqlalchemy == 1.4.49
    tqdm
    unstructured >= 0.8.0

[options.package_data]
* =
    *.yaml

[options.entry_points]
console_scripts =
    docs2chat = docs2chat.apps.main:main